--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "pretty": "prettier --single-quote --write --tab-width 4 \"src/**/*.{js,jsx}\"",
+    "pretty": "prettier --write --tab-width 4 \"src/**/*.js\"",
     "precommit": "npm run pretty && npm test"
   },
   "repository": {
