--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "scripts": {
     "test": "jest",
     "pretty": "prettier --write --tab-width 4 \"src/**/*.js\"",
-    "precommit": "npm run pretty && npm test"
+    "precommit": "lint-staged && npm test"
+  },
+  "lint-staged": {
+    "*.js": [
+      "npm run pretty",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
@@ -21,6 +27,7 @@
   "devDependencies": {
     "husky": "^0.13.4",
     "jest": "^20.0.4",
+    "lint-staged": "^3.6.1",
     "prettier": "^1.4.4"
   }
 }
